# diffusion-model-cpp

./: .gitmodules  CMakeLists.txt  README.md
configs/: sample.json  sample.json-tmplate
include/DiffusionModelC++/Config/: Config.hpp
include/DiffusionModelC++/Diffusion/: KarrasDiffusion.hpp  Sampler.hpp
include/DiffusionModelC++/Model/: Model.hpp  Modules.hpp
include/DiffusionModelC++/Trainer/: Dataloader.hpp  EMA.hpp  LRScheduler.hpp  Trainer.hpp
include/DiffusionModelC++/Util/: FileUtil.hpp  ImageUtil.hpp  Logging.hpp
src/: CMakeLists.txt
src/App/: Sample.cpp  Train.cpp
src/Config/: Config.cpp
src/Diffusion/: KarrasDiffusion.cpp  Sampler.cpp
src/Model/: Model.cpp  Modules.cpp
src/Trainer/: Dataloader.cpp  EMA.cpp  LRScheduler.cpp  Trainer.cpp
src/Util/: FileUtil.cpp
tests/: CMakeLists.txt
tests/test_AttentionModule/: CMakeLists.txt  main.cpp
tests/test_Dataloading/: CMakeLists.txt  main.cpp
tests/test_Diffusion/: CMakeLists.txt  main.cpp
tests/test_ImageIO/: CMakeLists.txt  main.cpp
tests/test_UNet/: CMakeLists.txt  main.cpp
